Added a templated control (they're awesome) and improved the UI. Custom Servers can be added locally

--- a/Client/View/Content/CustomServerPanel.axaml
+++ b/Client/View/Content/CustomServerPanel.axaml
@@ -13,9 +13,10 @@
       <StyleInclude Source="/Styles/Textblocks.axaml" />
       <StyleInclude Source="/Styles/LoginButtons.axaml" />
       <StyleInclude Source="/Styles/LoginInput.axaml" />
+      <StyleInclude Source="/Styles/LoginListbox.axaml" />
    </view:LoginBase.Styles>
 
-   <Grid RowDefinitions="Auto, Auto, *, Auto">
+   <Grid RowDefinitions="Auto, Auto, Auto, Auto, *">
       <TextBlock Grid.Row="0"
                  VerticalAlignment="Center"
                  Classes="Bold"
@@ -33,34 +34,8 @@
          <Run Text="not managed by Heast." FontWeight="Bold" />
       </TextBlock>
 
-      <ScrollViewer Grid.Row="2">
-         <ItemsControl Items="{Binding CustomServers}">
-            <ItemsControl.ItemTemplate>
-               <DataTemplate>
-                  <Grid ColumnDefinitions="50, *"
-                        RowDefinitions="Auto, Auto, Auto">
-                     <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"
-                            VerticalAlignment="Top"
-                            Margin="5"
-                            Source="{Binding Image}" />
-                     <TextBlock Grid.Column="1" Grid.Row="0"
-                                Text="{Binding Name}"
-                                TextWrapping="Wrap"
-                                Classes="Bold" />
-                     <TextBlock Grid.Column="1" Grid.Row="1"
-                                Text="{Binding Address}"
-                                TextWrapping="Wrap"
-                                Classes="Bold" />
-                     <TextBlock Grid.Column="1" Grid.Row="2"
-                                Text="{Binding Description}"
-                                TextWrapping="Wrap" />
-                  </Grid>
-               </DataTemplate>
-            </ItemsControl.ItemTemplate>
-         </ItemsControl>
-      </ScrollViewer>
-
-      <Grid Grid.Row="3" ColumnDefinitions="*, Auto, Auto">
+      <Grid Grid.Row="2" ColumnDefinitions="*, Auto, Auto"
+            Margin="0 20.0 0 0">
          <TextBox Grid.Column="0"
                   Watermark="Address"
                   Text="{Binding CustomServerAddress}"
@@ -74,5 +49,39 @@
                  Click="Button_OnConnect"
                  Margin="10.0 0 0 0" />
       </Grid>
+
+      <TextBlock Grid.Row="3"
+                 Text="List of added servers:"
+                 Classes="Watermark Bold"
+                 FontSize="18.0" />
+
+      <ListBox Grid.Row="4" Items="{Binding CustomServers}"
+               Background="{DynamicResource Mid}"
+               CornerRadius="10.0"
+               BorderBrush="Transparent"
+               Margin="0 10.0">
+         <ListBox.ItemTemplate>
+            <DataTemplate>
+               <Grid ColumnDefinitions="80, *"
+                     RowDefinitions="Auto, Auto, Auto">
+                  <Image Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"
+                         VerticalAlignment="Top"
+                         Margin="5"
+                         Source="{Binding Image}" />
+                  <TextBlock Grid.Column="1" Grid.Row="0"
+                             Text="{Binding Name}"
+                             TextWrapping="Wrap"
+                             Classes="Bold" />
+                  <TextBlock Grid.Column="1" Grid.Row="1"
+                             Text="{Binding Address}"
+                             TextWrapping="Wrap" />
+                  <TextBlock Grid.Column="1" Grid.Row="2"
+                             Text="{Binding Description}"
+                             Foreground="{DynamicResource Light}"
+                             TextWrapping="Wrap" />
+               </Grid>
+            </DataTemplate>
+         </ListBox.ItemTemplate>
+      </ListBox>
    </Grid>
 </view:LoginBase>
