--- a/Client/Styles/Globals.axaml
+++ b/Client/Styles/Globals.axaml
@@ -1,13 +1,21 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-	<Design.PreviewWith>
-		<Border Padding="20">
-			<!-- Add Controls for Previewer Here -->
-		</Border>
-	</Design.PreviewWith>
+   <Design.PreviewWith>
+      <Border Padding="20"
+              Background="{DynamicResource Mid}">
+         <!-- Add Controls for Previewer Here -->
+      </Border>
+   </Design.PreviewWith>
 
-	<!-- Add Styles Here -->
-	<Style Selector="Button">
-		<Setter Property="Cursor" Value="Hand" />
-	</Style>
+   <StyleInclude Source="/Controls/IconText.axaml" />
+   <StyleInclude Source="/Styles/Scrollbars.axaml" />
+
+   <!-- Add Styles Here -->
+   <Style Selector="Button">
+      <Setter Property="Cursor" Value="Hand" />
+   </Style>
+
+   <Style Selector="ListBoxItem">
+      <Setter Property="Cursor" Value="Hand" />
+   </Style>
 </Styles>
