--- a/Client/View/Content/LoginOptionsPanel.axaml
+++ b/Client/View/Content/LoginOptionsPanel.axaml
@@ -1,83 +1,82 @@
 <view:LoginBase
-	xmlns="https://github.com/avaloniaui"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:view="clr-namespace:Client.View.Content"
-	xmlns:vm="clr-namespace:Client.ViewModel"
-	xmlns:components="clr-namespace:Client.View.Components"
-	xmlns:ext="clr-namespace:Client.Extensions"
-	x:Class="Client.View.Content.LoginOptionsPanel">
+   xmlns="https://github.com/avaloniaui"
+   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+   xmlns:view="clr-namespace:Client.View.Content"
+   xmlns:vm="clr-namespace:Client.ViewModel"
+   xmlns:controls="clr-namespace:Client.Controls"
+   x:Class="Client.View.Content.LoginOptionsPanel">
 
-	<Design.DataContext>
-		<vm:LoginWindowViewModel />
-	</Design.DataContext>
+   <Design.DataContext>
+      <vm:LoginWindowViewModel />
+   </Design.DataContext>
 
-	<view:LoginBase.Resources>
-		<components:IconText
-			x:Key="Content.Signup"
-			Text="{ext:SimpleText Sign up}"
-			Icon="{SvgImage /Assets/Login/Add.svg}"
-			Foreground="{DynamicResource White}" />
-		<components:IconText
-			x:Key="Content.Login"
-			Text="{ext:SimpleText Log in}"
-			Icon="{SvgImage /Assets/Login/Login.svg}"
-			Foreground="{DynamicResource White}" />
-		<components:IconText
-			x:Key="Content.Guest"
-			Text="{ext:SimpleText Continue}"
-			Icon="{SvgImage /Assets/Login/Guest.svg}"
-			Foreground="{DynamicResource White}" />
-	</view:LoginBase.Resources>
+   <view:LoginBase.Resources>
+      <controls:IconText
+         x:Key="Content.Signup"
+         Text="Sign up"
+         Icon="{SvgImage /Assets/Login/Add.svg}"
+         Foreground="{DynamicResource White}" />
+      <controls:IconText
+         x:Key="Content.Login"
+         Text="Log in"
+         Icon="{SvgImage /Assets/Login/Login.svg}"
+         Foreground="{DynamicResource White}" />
+      <controls:IconText
+         x:Key="Content.Guest"
+         Text="Continue"
+         Icon="{SvgImage /Assets/Login/Guest.svg}"
+         Foreground="{DynamicResource White}" />
+   </view:LoginBase.Resources>
 
-	<view:LoginBase.Styles>
-		<StyleInclude Source="/Styles/Textblocks.axaml" />
-		<StyleInclude Source="/Styles/LoginButtons.axaml" />
-	</view:LoginBase.Styles>
+   <view:LoginBase.Styles>
+      <StyleInclude Source="/Styles/Textblocks.axaml" />
+      <StyleInclude Source="/Styles/LoginButtons.axaml" />
+   </view:LoginBase.Styles>
 
-	<Grid RowDefinitions="Auto, *, Auto">
-		<TextBlock Grid.Row="0" VerticalAlignment="Center"
-		           Classes="Bold"
-		           FontSize="32">
-			<Run Text="Welcome to"
-			     Foreground="{DynamicResource White}" />
-			<LineBreak />
-			<Run Text="Heast Messenger">
-				<Run.Foreground>
-					<LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,100%">
-						<LinearGradientBrush.GradientStops>
-							<GradientStop Offset="0" Color="#FFFDB242" />
-							<GradientStop Offset="1" Color="#FFFFCF8A" />
-						</LinearGradientBrush.GradientStops>
-					</LinearGradientBrush>
-				</Run.Foreground>
-			</Run>
-		</TextBlock>
+   <Grid RowDefinitions="Auto, *, Auto">
+      <TextBlock Grid.Row="0" VerticalAlignment="Center"
+                 Classes="Bold"
+                 FontSize="32">
+         <Run Text="Welcome to"
+              Foreground="{DynamicResource White}" />
+         <LineBreak />
+         <Run Text="Heast Messenger">
+            <Run.Foreground>
+               <LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,100%">
+                  <LinearGradientBrush.GradientStops>
+                     <GradientStop Offset="0" Color="#FFFDB242" />
+                     <GradientStop Offset="1" Color="#FFFFCF8A" />
+                  </LinearGradientBrush.GradientStops>
+               </LinearGradientBrush>
+            </Run.Foreground>
+         </Run>
+      </TextBlock>
 
-		<Border Grid.Row="1" />
+      <Border Grid.Row="1" />
 
-		<StackPanel Grid.Row="2"
-		            Orientation="Vertical">
-			<TextBlock
-				Text="New to Heast?"
-				Classes="Watermark Bold"
-				FontSize="18.0" />
-			<Button
-				Content="{StaticResource Content.Signup}"
-				Click="Button_OnSignup" />
-			<TextBlock
-				Text="Already a member?"
-				Classes="Watermark Bold"
-				FontSize="18.0" />
-			<Button
-				Content="{StaticResource Content.Login}"
-				Click="Button_OnLogin" />
-			<TextBlock
-				Text="Continue as a guest:"
-				Classes="Watermark Bold"
-				FontSize="18.0" />
-			<Button
-				Content="{StaticResource Content.Guest}"
-				Click="Button_OnGuest" />
-		</StackPanel>
-	</Grid>
+      <StackPanel Grid.Row="2"
+                  Orientation="Vertical">
+         <TextBlock
+            Text="New to Heast?"
+            Classes="Watermark Bold"
+            FontSize="18.0" />
+         <Button
+            Content="{StaticResource Content.Signup}"
+            Click="Button_OnSignup" />
+         <TextBlock
+            Text="Already a member?"
+            Classes="Watermark Bold"
+            FontSize="18.0" />
+         <Button
+            Content="{StaticResource Content.Login}"
+            Click="Button_OnLogin" />
+         <TextBlock
+            Text="Continue as a guest:"
+            Classes="Watermark Bold"
+            FontSize="18.0" />
+         <Button
+            Content="{StaticResource Content.Guest}"
+            Click="Button_OnGuest" />
+      </StackPanel>
+   </Grid>
 </view:LoginBase>
