--- a/Client/View/Content/SignupPanel.axaml
+++ b/Client/View/Content/SignupPanel.axaml
@@ -2,68 +2,67 @@
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:view="clr-namespace:Client.View.Content"
                 xmlns:vm="clr-namespace:Client.ViewModel"
-                xmlns:components="clr-namespace:Client.View.Components"
-                xmlns:ext="clr-namespace:Client.Extensions"
+                xmlns:controls="clr-namespace:Client.Controls"
                 x:Class="Client.View.Content.SignupPanel">
-	<Design.DataContext>
-		<vm:LoginWindowViewModel />
-	</Design.DataContext>
+   <Design.DataContext>
+      <vm:LoginWindowViewModel />
+   </Design.DataContext>
 
-	<view:LoginBase.Resources>
-		<components:IconText
-			x:Key="Content.Signup"
-			Text="{ext:SimpleText Sign up}"
-			Icon="{SvgImage /Assets/Login/Add.svg}"
-			Foreground="{DynamicResource White}" />
-	</view:LoginBase.Resources>
+   <view:LoginBase.Resources>
+      <controls:IconText
+         x:Key="Content.Signup"
+         Text="Sign up"
+         Icon="{SvgImage /Assets/Login/Add.svg}"
+         Foreground="{DynamicResource White}" />
+   </view:LoginBase.Resources>
 
-	<view:LoginBase.Styles>
-		<StyleInclude Source="/Styles/Textblocks.axaml" />
-		<StyleInclude Source="/Styles/LoginButtons.axaml" />
-		<StyleInclude Source="/Styles/LoginInput.axaml" />
-	</view:LoginBase.Styles>
+   <view:LoginBase.Styles>
+      <StyleInclude Source="/Styles/Textblocks.axaml" />
+      <StyleInclude Source="/Styles/LoginButtons.axaml" />
+      <StyleInclude Source="/Styles/LoginInput.axaml" />
+   </view:LoginBase.Styles>
 
-	<Grid RowDefinitions="Auto, Auto, *, Auto">
-		<TextBlock
-			Grid.Row="0"
-			VerticalAlignment="Center"
-			Classes="Bold"
-			FontSize="32">
-			Welcome!
-		</TextBlock>
+   <Grid RowDefinitions="Auto, Auto, *, Auto">
+      <TextBlock
+         Grid.Row="0"
+         VerticalAlignment="Center"
+         Classes="Bold"
+         FontSize="32">
+         Welcome!
+      </TextBlock>
 
-		<TextBlock
-			Grid.Row="1"
-			VerticalAlignment="Center"
-			TextWrapping="Wrap"
-			Classes="Title">
-			<Run Text="Tell us your" />
-			<Run Text="name, email" FontWeight="Bold" />
-			<Run Text="address and choose a" />
-			<Run Text="strong password." FontWeight="Bold" />
-		</TextBlock>
+      <TextBlock
+         Grid.Row="1"
+         VerticalAlignment="Center"
+         TextWrapping="Wrap"
+         Classes="Title">
+         <Run Text="Tell us your" />
+         <Run Text="name, email" FontWeight="Bold" />
+         <Run Text="address and choose a" />
+         <Run Text="strong password." FontWeight="Bold" />
+      </TextBlock>
 
-		<Border Grid.Row="2" />
+      <Border Grid.Row="2" />
 
-		<StackPanel Grid.Row="3"
-		            Orientation="Vertical">
-			<TextBox
-				Watermark="Username"
-				Text="{Binding SignupUsername}" />
-			<TextBox
-				Watermark="Email address"
-				Text="{Binding SignupEmail}" />
-			<TextBox
-				Watermark="Password"
-				Classes="Password"
-				Text="{Binding SignupPassword}" />
-			<TextBlock
-				Text="Sign up when you're ready!"
-				Classes="Watermark Bold"
-				FontSize="18.0" />
-			<Button
-				Content="{StaticResource Content.Signup}"
-				Command="{Binding Signup}" />
-		</StackPanel>
-	</Grid>
+      <StackPanel Grid.Row="3"
+                  Orientation="Vertical">
+         <TextBox
+            Watermark="Username"
+            Text="{Binding SignupUsername}" />
+         <TextBox
+            Watermark="Email address"
+            Text="{Binding SignupEmail}" />
+         <TextBox
+            Watermark="Password"
+            Classes="Password"
+            Text="{Binding SignupPassword}" />
+         <TextBlock
+            Text="Sign up when you're ready!"
+            Classes="Watermark Bold"
+            FontSize="18.0" />
+         <Button
+            Content="{StaticResource Content.Signup}"
+            Command="{Binding Signup}" />
+      </StackPanel>
+   </Grid>
 </view:LoginBase>
