--- a/Client/View/Sidebars/SettingsSidebar.axaml
+++ b/Client/View/Sidebars/SettingsSidebar.axaml
@@ -1,75 +1,72 @@
 <view:SidebarBase
-	xmlns="https://github.com/avaloniaui"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:view="clr-namespace:Client.View.Sidebars"
-	xmlns:components="clr-namespace:Client.View.Components"
-	xmlns:vm="clr-namespace:Client.ViewModel.Sidebars"
-	xmlns:ext="clr-namespace:Client.Extensions"
-	x:Class="Client.View.Sidebars.SettingsSidebar"
-	Width="180.0">
+   xmlns="https://github.com/avaloniaui"
+   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+   xmlns:view="clr-namespace:Client.View.Sidebars"
+   xmlns:components="clr-namespace:Client.View.Components"
+   xmlns:vm="clr-namespace:Client.ViewModel.Sidebars"
+   xmlns:controls="clr-namespace:Client.Controls"
+   x:Class="Client.View.Sidebars.SettingsSidebar"
+   Width="220.0">
 
-	<Design.DataContext>
-		<vm:SettingsSidebarViewModel />
-	</Design.DataContext>
+   <Design.DataContext>
+      <vm:SettingsSidebarViewModel />
+   </Design.DataContext>
 
-	<view:SidebarBase.Resources>
-		<components:IconText
-			x:Key="Content.Account"
-			Text="{ext:SimpleText Account}"
-			Icon="{SvgImage /Assets/Settings/Account.svg}"
-			Foreground="{DynamicResource White}" />
-		<components:IconText
-			x:Key="Content.Security"
-			Text="{ext:SimpleText Security}"
-			Icon="{SvgImage /Assets/Settings/Security.svg}"
-			Foreground="{DynamicResource White}" />
-		<components:IconText
-			x:Key="Content.Notifications"
-			Text="{ext:SimpleText Notifications}"
-			Icon="{SvgImage /Assets/Settings/Notifications.svg}"
-			Foreground="{DynamicResource White}" />
-		<components:IconText
-			x:Key="Content.Appearance"
-			Text="{ext:SimpleText Appearance}"
-			Icon="{SvgImage /Assets/Settings/Appearance.svg}"
-			Foreground="{DynamicResource White}" />
-		<components:IconText
-			x:Key="Content.Status"
-			Text="{ext:SimpleText Status}"
-			Icon="{SvgImage /Assets/Settings/Status.svg}"
-			Foreground="{DynamicResource White}" />
-	</view:SidebarBase.Resources>
+   <view:SidebarBase.Resources>
+      <controls:IconText
+         x:Key="Content.Account"
+         Text="Account"
+         Icon="{SvgImage /Assets/Settings/Account.svg}"
+         Foreground="{DynamicResource White}" />
+      <controls:IconText
+         x:Key="Content.Security"
+         Text="Security"
+         Icon="{SvgImage /Assets/Settings/Security.svg}"
+         Foreground="{DynamicResource White}" />
+      <controls:IconText
+         x:Key="Content.Notifications"
+         Text="Notifications"
+         Icon="{SvgImage /Assets/Settings/Notifications.svg}"
+         Foreground="{DynamicResource White}" />
+      <controls:IconText
+         x:Key="Content.Appearance"
+         Text="Appearance"
+         Icon="{SvgImage /Assets/Settings/Appearance.svg}"
+         Foreground="{DynamicResource White}" />
+      <controls:IconText
+         x:Key="Content.Status"
+         Text="Status"
+         Icon="{SvgImage /Assets/Settings/Status.svg}"
+         Foreground="{DynamicResource White}" />
+   </view:SidebarBase.Resources>
 
-	<view:SidebarBase.Styles>
-		<StyleInclude Source="/Styles/BorderButtons.axaml" />
-		<!-- <Style Selector="Button"> -->
-		<!-- 	<Setter Property="Padding" Value="16.0" /> -->
-		<!-- </Style> -->
-	</view:SidebarBase.Styles>
+   <view:SidebarBase.Styles>
+      <StyleInclude Source="/Styles/BorderButtons.axaml" />
+   </view:SidebarBase.Styles>
 
-	<ScrollViewer HorizontalScrollBarVisibility="Disabled"
-	              VerticalScrollBarVisibility="Auto">
-		<StackPanel Orientation="Vertical">
-			<components:RadioButton
-				Content="{StaticResource Content.Account}"
-				GroupName="Sidebar"
-				Command="{Binding Button_OnAccount}" />
-			<components:RadioButton
-				Content="{StaticResource Content.Security}"
-				GroupName="Sidebar"
-				Command="{Binding Button_OnSecurity}" />
-			<components:RadioButton
-				Content="{StaticResource Content.Notifications}"
-				GroupName="Sidebar"
-				Command="{Binding Button_OnNotifications}" />
-			<components:RadioButton
-				Content="{StaticResource Content.Appearance}"
-				GroupName="Sidebar"
-				Command="{Binding Button_OnAppearance}" />
-			<components:RadioButton
-				Content="{StaticResource Content.Status}"
-				GroupName="Sidebar"
-				Command="{Binding Button_OnStatus}" />
-		</StackPanel>
-	</ScrollViewer>
+   <ScrollViewer HorizontalScrollBarVisibility="Disabled"
+                 VerticalScrollBarVisibility="Auto">
+      <StackPanel Orientation="Vertical">
+         <components:RadioButton
+            Content="{StaticResource Content.Account}"
+            GroupName="Sidebar"
+            Command="{Binding Button_OnAccount}" />
+         <components:RadioButton
+            Content="{StaticResource Content.Security}"
+            GroupName="Sidebar"
+            Command="{Binding Button_OnSecurity}" />
+         <components:RadioButton
+            Content="{StaticResource Content.Notifications}"
+            GroupName="Sidebar"
+            Command="{Binding Button_OnNotifications}" />
+         <components:RadioButton
+            Content="{StaticResource Content.Appearance}"
+            GroupName="Sidebar"
+            Command="{Binding Button_OnAppearance}" />
+         <components:RadioButton
+            Content="{StaticResource Content.Status}"
+            GroupName="Sidebar"
+            Command="{Binding Button_OnStatus}" />
+      </StackPanel>
+   </ScrollViewer>
 </view:SidebarBase>
