--- a/Client/Resources/Colors.axaml
+++ b/Client/Resources/Colors.axaml
@@ -1,13 +1,14 @@
 <ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-	<!-- Add Resources Here -->
-	<Color x:Key="Dark">#FF1E1E24</Color>
-	<Color x:Key="Mid">#FF26262D</Color>
-	<Color x:Key="Light">#FF4F545E</Color>
-	<Color x:Key="Gray">#FF34343A</Color>
-	<Color x:Key="White">#FFEBF2FF</Color>
-	<Color x:Key="Accent">#FFFEBC2E</Color>
-	<Color x:Key="Red">#FFF45449</Color>
-	<Color x:Key="Green">#FF67FF76</Color>
-	<Color x:Key="Blue">#FF67B6FF</Color>
+   <!-- Add Resources Here -->
+   <Color x:Key="Dark">#FF1E1E24</Color>
+   <Color x:Key="Mid">#FF26262D</Color>
+   <Color x:Key="Light">#FF4F545E</Color>
+   <Color x:Key="Gray">#FF34343A</Color>
+   <Color x:Key="White">#FFEBF2FF</Color>
+   <Color x:Key="Accent">#FFFEBC2E</Color>
+   <Color x:Key="Red">#FFF45449</Color>
+   <Color x:Key="Green">#FF67FF76</Color>
+   <Color x:Key="Blue">#FF67B6FF</Color>
+   <Color x:Key="Transparent">#00000000</Color>
 </ResourceDictionary>
