--- a/Client/View/LoginWindow.axaml
+++ b/Client/View/LoginWindow.axaml
@@ -1,7 +1,6 @@
 ﻿<Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:Client.ViewModel"
-        xmlns:components="clr-namespace:Client.View.Components"
         xmlns:utility="clr-namespace:Client.Converter"
         x:Class="Client.View.LoginWindow"
         ExtendClientAreaChromeHints="OSXThickTitleBar, PreferSystemChrome"
@@ -10,7 +9,7 @@
         Title="Welcome to Heast!"
         CanResize="False"
         Width="400"
-        Height="600">
+        Height="660">
 
    <Design.DataContext>
       <vm:LoginWindowViewModel />
@@ -25,13 +24,19 @@
          Background="{DynamicResource Mid}"
          IsHitTestVisible="False" />
 
-      <Grid RowDefinitions="38, *">
+      <Grid RowDefinitions="38, *, Auto">
          <Grid Grid.Row="0" ColumnDefinitions="Auto, *, Auto">
-            <components:BackButton
-               IsVisible="{Binding Content.Back,
-					Converter={StaticResource IsNotNull}}"
-               Initialized="BackButton_OnInitialized"
-               Click="BackButton_OnClick" />
+            <Button Click="BackButton_OnClick"
+                    Initialized="BackButton_OnInitialized"
+                    IsVisible="{Binding Content.Back,
+					     Converter={StaticResource IsNotNull}}"
+                    Width="38.0" Height="38.0"
+                    Padding="10.0"
+                    Content="{SvgImage /Assets/Login/Back.svg}">
+               <Button.Styles>
+                  <StyleInclude Source="/Styles/HollowButtons.axaml" />
+               </Button.Styles>
+            </Button>
          </Grid>
 
          <TransitioningContentControl
@@ -44,6 +49,26 @@
                <CrossFade Duration="0:00:00.200" />
             </TransitioningContentControl.PageTransition>
          </TransitioningContentControl>
+
+         <Border Grid.Row="2"
+                 BorderThickness="0 1.0 0 0"
+                 BorderBrush="{DynamicResource Gray}"
+                 Padding="5.0">
+            <StackPanel Orientation="Horizontal" Spacing="5.0">
+               <TextBlock Foreground="{DynamicResource Light}"
+                          TextWrapping="Wrap">
+                  <Run Text="Heast Messenger" />
+                  <Run Text="Version" />
+                  <Run Text="{Binding Version}"
+                       FontWeight="Bold" />
+                  <LineBreak />
+                  <Run Text="Error:" />
+                  <Run Text="{Binding Error}"
+                       Foreground="{DynamicResource Red}"
+                       FontWeight="Bold" />
+               </TextBlock>
+            </StackPanel>
+         </Border>
       </Grid>
    </Panel>
 </Window>
